public interface ILabelDisplayer
{
    void Show();
}
