namespace UI
{
    public interface IPlayerButtonAction
    {
        void TapAction();
        void ReleaseAction();
    }
}