namespace Player
{
    internal interface IPlayerMissAnimator
    {
        void Animate();
    }
}
