using System;
using UnityEngine;

namespace Orb
{
    public class OrbManager : MonoBehaviour
    {
        public int ORB_POINT;

        internal int GetOrbPoint()
        {
            return ORB_POINT;
        }
    }
}